--- a/Fumigabot/app/src/main/res/layout/entrada_historial.xml
+++ b/Fumigabot/app/src/main/res/layout/entrada_historial.xml
@@ -65,13 +65,14 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.50" />" />
+            app:layout_constraintVertical_bias="0.50"/>
 
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_gravity="bottom"
+            android:layout_marginStart="16dp"
             android:background="@color/colorDivider"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
