--- a/Fumigabot/app/src/main/res/layout/fragment_historial.xml
+++ b/Fumigabot/app/src/main/res/layout/fragment_historial.xml
@@ -19,13 +19,12 @@
             android:background="@drawable/recuadro_sin_fumigaciones"
             android:padding="20dp"
             android:text="Todavía no se realizaron fumigaciones"
+            android:textAlignment="center"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-        <!--
-            android:textColor="@color/colorPrimary" -->
 
         <TextView
             android:id="@+id/textView5"
@@ -46,8 +45,8 @@
 
         <ListView
             android:id="@+id/listaEntradaFumigaciones"
-            android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_width="0dp"
             android:layout_marginBottom="1dp"
             android:gravity="center"
             android:horizontalSpacing="3dp"
@@ -57,8 +56,6 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-        <!--android:numColumns="2"-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
