Primera versión de Inicio + Agregado de químicos
Cambios en la visibilidad del sistema en la pantalla principal (sujeto a modificaciones, por supuesto).
Agregado de químicos (se pasó la fila editable a XML)

--- a/Fumigabot/app/src/main/res/layout/activity_robot_home.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_robot_home.xml
@@ -75,7 +75,7 @@
         app:layout_constraintVertical_bias="0.811" />
 
     <TextView
-        android:id="@+id/textActividadRobot"
+        android:id="@+id/textEstadoFumigacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ESPERANDO ÓRDENES..."
@@ -95,7 +95,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textActividadRobot" />
+        app:layout_constraintTop_toBottomOf="@+id/textEstadoFumigacion" />
 
     <TextView
         android:id="@+id/textBateria"
