--- a/Fumigabot/app/src/main/res/layout/activity_splash.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageRobot"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:layout_marginStart="128dp"
+        android:layout_marginStart="129dp"
         android:layout_marginEnd="128dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,15 +24,15 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/app_name"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/imageRobot"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView4"
