--- a/Fumigabot/app/src/main/res/layout/fragment_historial.xml
+++ b/Fumigabot/app/src/main/res/layout/fragment_historial.xml
@@ -45,9 +45,11 @@
 
         <ListView
             android:id="@+id/listaEntradaFumigaciones"
-            android:layout_height="0dp"
             android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="1dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
             android:gravity="center"
             android:horizontalSpacing="3dp"
             android:verticalSpacing="3dp"
